# optic

./: .gitignore  CMakeLists.txt  hierarchicalMutex.cc  producerConsumerDemo.cc
.github/workflows/: deploy_wasm.yml
src/: Filters.cpp  Filters.h  ImageProcessor.cpp  ImageProcessor.h  Kernel.h  Pixel.h  main.cpp
web/: index.html  server.py  sindexFu.html  worker.js
